@@ -1,6 +1,6 @@
       real*8 function pre_atrad(number)
 c
-c $Id: pre_atrad.F,v 1.1 1998-04-14 18:20:15 d3j191 Exp $
+c $Id: pre_atrad.F,v 1.2 1998-04-14 22:34:21 d3j191 Exp $
 c
       implicit none
       integer number
@@ -8,19 +8,19 @@ c
       real*8 radius(0:105)
 c
       data radius / 99999.99,
-     + 0.60, 0.70, 0.80, 0.90, 0.90, 0.90, 0.80, 0.70, 0.90, 0.90,
-     + 0.90, 0.90, 0.90, 0.90, 0.90, 1.10, 1.10, 1.10, 1.10, 1.10,
-     + 1.10, 1.10, 1.10, 1.10, 1.10, 1.10, 1.10, 1.10, 1.10, 1.10,
-     + 1.10, 1.10, 1.10, 1.10, 1.10, 1.10, 1.10, 1.10, 1.10, 1.10,
-     + 1.10, 1.10, 1.10, 1.10, 1.10, 1.10, 1.10, 1.10, 1.10, 1.10,
-     + 1.10, 1.10, 1.10, 1.10, 1.10, 1.10, 1.10, 1.10, 1.10, 1.10,
-     + 1.10, 1.10, 1.10, 1.10, 1.10, 1.10, 1.10, 1.10, 1.10, 1.10,
-     + 1.10, 1.10, 1.10, 1.10, 1.10, 1.10, 1.10, 1.10, 1.10, 1.10,
-     + 1.10, 1.10, 1.10, 1.10, 1.10, 1.10, 1.10, 1.10, 1.10, 1.10,
-     + 1.10, 1.10, 1.10, 1.10, 1.10, 1.10, 1.10, 1.10, 1.10, 1.10,
-     + 1.10, 1.10, 1.10, 1.10, 1.10 /
+     + 0.30, 1.22, 1.23, 0.89, 0.88, 0.77, 0.70, 0.66, 0.58, 1.60,
+     + 0.00, 1.36, 1.25, 1.17, 1.10, 1.04, 0.99, 1.91, 2.03, 1.74,
+     + 1.44, 1.32, 1.22, 1.19, 1.17,1.165, 1.16, 1.15, 1.17, 1.25,
+     + 1.25, 1.22, 1.21, 1.17, 1.14, 1.98, 2.22, 1.92, 1.62, 1.45,
+     + 1.34, 1.29, 1.27, 1.24, 1.25, 1.28, 1.34, 1.41, 1.50, 1.40,
+     + 1.41, 1.37, 1.33, 2.09, 2.35, 1.98, 1.69, 1.65, 1.65, 1.64,
+     + 1.65, 1.66, 1.65, 1.61, 1.59, 1.59, 1.58, 1.57, 1.56, 1.56,
+     + 1.56, 1.44, 1.34, 1.30, 1.28, 1.26, 1.26, 1.29, 1.34, 1.44,
+     + 1.55, 1.54, 1.52, 1.53, 1.50, 2.20, 3.24, 2.68, 2.25, 2.16,
+     + 1.93, 1.66, 1.57, 1.81, 2.21, 1.43, 1.42, 1.40, 1.39, 1.38,
+     + 1.37, 1.36, 1.34, 1.30, 1.30 /
 c
-      pre_atrad=radius(number)
+      pre_atrad=1.1d0*radius(number)
 c
       return
       end
